k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
    project: fiap-hack
