k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management
  selector:
    app: rabbitmq
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management
  selector:
    app: rabbitmq
